--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-polyfill": "^6.26.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "redux": "^4.0.0"
   }
 }
