--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   }
 }
